--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name" : "domtosource",
 	"version" : "0.0.1",
-	"description" : "This module wraps around Cheerio and magically calculates the line and column number where DOM elements appear in the HTML source code.",
+	"description" : "This module wraps around Cheerio and magically calculates the line and column numbers where DOM elements appear in the HTML source code.",
 	"keywords": ["html", "cheerio", "jquery"],
 	"homepage" : "https://github.com/keeganstreet/domtosource",
 	"author" : {
