--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name" : "domtosource",
-	"version" : "0.0.4",
+	"version" : "0.1.0",
 	"description" : "This module wraps around Cheerio and magically calculates the line and column numbers where DOM elements appear in the HTML source code.",
 	"keywords": ["html", "cheerio", "jquery"],
 	"homepage" : "https://github.com/keeganstreet/domtosource",
@@ -17,13 +17,13 @@
 	},
 	"main": "app",
 	"engines": {
-		"node": "~0.8.x"
+		"node": ">= 0.8.x"
 	},
 	"scripts": {
 		"test": "node_modules/.bin/mocha test/test.js"
 	},
 	"dependencies" : {
-		"cheerio" : "0.12.x"
+		"cheerio" : "0.13.x"
 	},
 	"devDependencies": {
 		"mocha": "1.12.x"
